--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<div class="hero-cta">
 									<a
 										class="button button-primary button-wide-mobile"
-										href="#"
+										href="./dist/apk/evacuease.apk"
 										>Download</a
 									>
 								</div>
