--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 									<a
 										class="button button-primary button-wide-mobile"
 										href="./dist/apk/evacuease.apk"
+										download="evacuease.apk"
 										>Download</a
 									>
 								</div>
