--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<div class="hero-cta">
 									<a
 										class="button button-primary button-wide-mobile"
-										href="./dist/apk/evacuease.apk"
+										href="dist/apk/evacuease.apk"
 										download="evacuease.apk"
 										>Download</a
 									>
@@ -283,7 +283,7 @@
 							</ul>
 							<div class="footer-copyright">
 								&copy; 2018 Venus, all rights reserved template
-								Used
+								Used // 2025 Evacuease
 							</div>
 						</div>
 					</div>
