--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 									<div class="cta-cta">
 										<a
 											class="button button-primary button-wide-mobile"
-											href="#"
+											href="dist/apk/evacuease.apk"
+											download="evacuease.apk"
 											>Download</a
 										>
 									</div>
